# clockwork

./: .gitmodules  CMakeLists.txt  README.md
res/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv  default_lit.frag  textured_lit.frag  tri_mesh.vert  tri_mesh.vert.spv  triangle.frag  triangle.vert  triangle_red.vert
scr/: clockwork.cpp
scr/graphics/: engine.cpp  engine.hpp  initializers.cpp  initializers.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  textures.cpp  textures.hpp  types.hpp
